commit to Lost and Found System 2024

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -1,63 +1,85 @@
+<section><!-- Welcome Header -->
 <h1 style="text-align: center;"><span style="font-size: 24pt; color: green;"><strong><span style="font-family: terminal, monaco, monospace;">Welcome to The Lost and Found Information System!</span></strong></span></h1>
 <p>&nbsp;</p>
-<p style="color: black; font-family: 'Calligraphy', cursive;">Your trusted campus companion for retrieving what you've misplaced! We understand that losing personal belongings can be stressful, and our mission is to alleviate that worry. Our efficient and secure system is designed to reunite you with your lost items swiftly and with ease. If you've lost something or found an item that isn't yours, you're in the right place. Let's work together to bring lost items back to their rightful owners. Start your search or report a found item now, and experience the peace of mind that comes with our dedicated service. Remember, every lost item has a story, and every story deserves a happy ending. Let's find yours!</p>
+<p style="color: black; font-family: 'Calligraphy', cursive;"><span style="font-family: 'times new roman', times, serif;">Your trusted campus companion for retrieving what you've misplaced! We understand that losing personal belongings can be stressful, and our mission is to alleviate that worry. Our efficient and secure system is designed to reunite you with your lost items swiftly and with ease. If you've lost something or found an item that isn't yours, you're in the right place. Let's work together to bring lost items back to their rightful owners. Start your search or report a found item now, and experience the peace of mind that comes with our dedicated service. Remember, every lost item has a story, and every story deserves a happy ending. Let's find yours! Welcome to our Lost and Found Information System, where we turn "lost and found" into "lost and found with a twist!" Losing stuff is like a rite of passage in life, but it doesn't have to be a hair-pulling experience. Our team is here to rescue your lost items from the abyss of forgetfulness and return them to you with a smile. Think of us as the superheroes of the mundane, the Sherlock Holmes of misplaced keys, and the magicians of disappearing socks. With our trusty technology and a sprinkle of humor, we're on a mission to make the world a little less forgetful, one lost item at a time. So, if you've misplaced your dignity, your favorite pen, or even your pet rock, fear not! We've got your back. Join us in our quest to turn lost into found and add a dash of laughter along the way. Because let's face it, life's too short to take everything seriously, especially when it comes to finding that missing sock. </span><br><span style="font-family: 'times new roman', times, serif;">Welcome to the Lost and Found Information System, where we take your losses and turn them into hilarious victories!</span></p>
 <p>&nbsp;</p>
-<p style="text-align: justify;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Mission</strong></span></p>
-<p style="text-align: justify;">Our mission is to provide a reliable and efficient lost and found management system that ensures the safe return of misplaced items to their rightful owners.</p>
-<p style="text-align: justify;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Vision</strong>:</span></p>
-<p style="text-align: justify;">Our vision is to become the leading provider of lost and found solutions on campuses nationwide, setting the standard for efficiency and effectiveness in managing lost and found items.</p>
-<p style="text-align: justify;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Core Values</strong></span>:</p>
-<p style="text-align: justify;">Integrity: We are committed to operating with honesty and transparency in all aspects of our business.</p>
-<p style="text-align: justify;">Efficiency: We strive to provide quick and effective solutions for managing lost and found items.</p>
-<p style="text-align: justify;">Customer Service: We prioritize customer satisfaction and go above and beyond to ensure a positive experience for all users of our system.</p>
-<p style="text-align: justify;">Innovation: We constantly seek new ways to improve and enhance our lost and found management system.</p>
-<p style="text-align: justify;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Team:</strong></span></p>
-<p style="text-align: justify;">Our team consists of three dedicated professionals with expertise in technology, customer service, and lost and found management. Together, we are passionate about providing a solution that simplifies the process of retrieving misplaced items and ensures a positive experience for all users.</p>
-<p style="text-align: justify;">With Lost and Found, you can trust that your lost items are in good hands. Join us in our mission to revolutionize the way lost and found items are managed on campus.</p>
+<!-- More About Us Button -->
+<div style="text-align: center; margin-top: 20px;"><a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="?page=about">Learn More...</a></div>
+<div style="text-align: center; margin-top: 20px;">&nbsp;</div>
+<!-- End of More About Us Button -->
+<p style="text-align: center;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Mission: </strong></span></p>
+<p style="text-align: center;"><span style="font-family: 'andale mono', monospace; color: red;">Ensuring the Safe Return Of Misplaced Items</span></p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">Our mission is to provide a reliable and efficient lost and found management system that ensures the safe return of misplaced items to their rightful owners.</span></p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">At The Lost and Found Information System, we are dedicated to providing a dependable and efficient service for handling lost and found items. We recognize the stress and inconvenience that come with losing personal belongings, which is why our mission is to streamline the process of reuniting people with their items. Our top priority is ensuring the safe return of misplaced items, whether it's a forgotten laptop, a set of keys, or a cherished accessory. With a commitment to prompt action and careful management, we strive to make the experience of retrieving lost items as smooth and stress-free as possible for all our users.</span></p>
+<p style="text-align: center;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Vision</strong>: </span></p>
+<p style="text-align: center;"><span style="font-family: 'andale mono', monospace; color: red;">Leading Lost and Found Solutions around Maseno University</span></p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">Our vision is to become the leading provider of lost and found solutions on campuses nationwide, setting the standard for efficiency and effectiveness in managing lost and found items.</span></p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">Our vision is to redefine the lost and found experience, transcending campus boundaries to create a seamless and efficient system that positively impacts communities across the Varsity. By setting the standard for lost and found management, we aspire to be the go-to solution for reuniting people with their lost items, making the process hassle-free and stress-free for all. Our commitment to efficiency and effectiveness drives us to continuously innovate and improve, ensuring that every lost item finds its way back to its rightful owner. Together, let's make lost and found a meaningful and impactful service that brings people together and fosters a sense of community care and support.</span></p>
+<p style="text-align: center;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Core Values</strong></span>:</p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">Integrity: We are committed to operating with honesty and transparency in all aspects of our business.&nbsp;Trust is essential in handling lost items, and we uphold the highest ethical standards.</span></p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">Efficiency: We strive to provide quick and effective solutions for managing lost and found items.&nbsp;We understand the urgency of reuniting people with their belongings.</span></p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">Customer Service: We prioritize customer satisfaction and go above and beyond to ensure a positive experience for all users of our system.</span></p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">Innovation: We constantly seek new ways to improve and enhance our lost and found management system.</span></p>
+<p style="text-align: center;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Team:</strong></span></p>
+<p style="text-align: justify;"><span style="font-family: 'times new roman', times, serif;">Our team consists of three dedicated professionals with expertise in technology, customer service, and lost and found management. Together, we are passionate about providing a solution that simplifies the process of retrieving misplaced items and ensures a positive experience for all users. Our team is composed of dedicated individuals who bring unique expertise and skills to ensure the success of our vision. Our technology expert is responsible for maintaining the technical aspects of our system, ensuring that it runs smoothly, securely handles data, and provides a user-friendly experience. The customer service specialist is focused on assisting users, addressing inquiries, guiding users through the process, and providing timely responses to ensure a positive experience for all. Lastly, our lost and found management professional oversees the entire lost and found process, managing reported items, tracking found items, and coordinating reunification efforts to ensure that every lost item finds its way back to its rightful owner. Together, our team is committed to redefining the lost and found experience and making a positive impact on communities across the Varsity.</span></p>
+<p style="text-align: center;"><span style="font-family: 'andale mono', monospace; color: red;"><strong>Trust The Lost and Found Information System, Trust Us!</strong></span></p>
+<p style="text-align: center;"><span style="font-family: 'times new roman', times, serif;">With Lost and Found, you can trust that your lost items are in good hands. Join us in our mission to revolutionize the way lost and found items are managed on campus.</span></p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">&nbsp;</p>
+<!-- Blog posts Section Start -->
 <section id="blog-section" class="ftco-section bg-light">
-<div class="container">
-<div class="row justify-content-center mb-5 pb-5">
-<div class="col-md-7 heading-section text-center ftco-animate">
-<h2 class="mb-4">Blog Posts</h2>
-<p>Working together to bring lost items back to their rightful owners.</p>
+    <div class="container">
+<div class="container-fluid guide py-5">
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h5 class="section-title text-center" style="color: maroon;font-weight: bold;">Working together to bring lost items back to their rightful owners.</h5>
+                <h1 class="text-center" style="color: navy; ">Blog Posts</h1>
+                <p style="text-align: justify;"><br></p>
+            </div>
+        </div>
+        <div class="row g-4 justify-content-center">
+            <!-- Sample blog post 1 -->
+            <div class="col-md-6 col-lg-4">
+                <div class="guide-item">
+                    <a href="https://tealswan.com/teals-blog/lost-and-found/"><img src="/uploads/blogs/blog1.jpg" class="img-fluid rounded-top" alt="Blog 1"></a>
+                    <div class="guide-title text-center rounded-bottom p-4">
+                        <h4 class="heading"><a href="https://tealswan.com/teals-blog/lost-and-found/">Finding Yourself</a></h4>
+                        <p>If you are disconnected from your own feelings and emotions, you are disconnected from the truth of you.</p>
+                        <div class="guide-icon rounded-pill p-2">
+                            <p class="mb-0"><span class="mr-2">June 26, 2014</span>&nbsp;<a class="mr-2" href="#">TEAL</a> <a class="meta-chat" href="https://tealswan.com/teals-blog/lost-and-found/">SWAN</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Sample blog post 2 -->
+            <div class="col-md-6 col-lg-4">
+                <div class="guide-item">
+                    <a href="https://blog.klm.com/lost-and-found/"><img src="/uploads/blogs/blog2.jpg" class="img-fluid rounded-top" alt="Blog 2"></a>
+                    <div class="guide-title text-center rounded-bottom p-4">
+                        <h4 class="heading"><a href="https://blog.klm.com/lost-and-found/">John Lost and Barbara Found</a></h4>
+                        <p>This eye-catching artwork soon became a meeting point for travellers from Schiphol Airport - Amsterdam.</p>
+                        <div class="guide-icon rounded-pill p-2">
+                            <p class="mb-0"><span class="mr-2">May 15, 2013</span> <a class="mr-2" href="https://blog.klm.com/lost-and-found/">&nbsp;Morena</a></p>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Sample blog post 3 -->
+            <div class="col-md-6 col-lg-4">
+                <div class="guide-item">
+                    <a href="https://blogcfl.lu/en/simply-explained/from-lost-property-to-found-happiness"><img src="/uploads/blogs/blog3.jpg" class="img-fluid rounded-top" alt="Blog 3"></a>
+                    <div class="guide-title text-center rounded-bottom p-4">
+                        <h4 class="heading"><a href="https://blogcfl.lu/en/simply-explained/from-lost-property-to-found-happiness">Technology at the customer&rsquo;s service</a></h4>
+                        <p>Dedicated to helping you recover an item lost on a train or in a station, the Lost Property Office at Luxembourg Station handles more than 10,000 cases a year. With the aim of maximising the number of successful outcomes.</p>
+                        <div class="guide-icon rounded-pill p-2">
+                            <p class="mb-0"><span class="mr-2">July 28, 2023</span> <a class="mr-2" href="https://blogcfl.lu/en/simply-explained/from-lost-property-to-found-happiness">CFL Group</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-</div>
-<div class="row d-flex">
-<div class="col-md-4 d-flex ftco-animate">
-<div class="blog-entry justify-content-end"><a class="block-20" style="background-image: url('uploads/defaults/blog1.jpg');" href="single.html"> </a>
-<div class="text mt-3 float-right d-block">
-<div class="d-flex align-items-center mb-3 meta">
-<p class="mb-0"><span class="mr-2">June 26, 2014</span>&nbsp;<a class="mr-2" href="#">TEAL</a> <a class="meta-chat" href="#">SWAN</a></p>
-</div>
-<h3 class="heading"><a href="https://tealswan.com/teals-blog/lost-and-found/">Finding Yourself</a></h3>
-<p>If you are disconnected from your own feelings and emotions, you are disconnected from the truth of you.</p>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex ftco-animate">
-<div class="blog-entry justify-content-end"><a class="block-20" style="background-image: url('uploads/defaults/blog2.jpg');" href="single.html"> </a>
-<div class="text mt-3 float-right d-block">
-<div class="d-flex align-items-center mb-3 meta">
-<p class="mb-0"><span class="mr-2">May 15, 2013</span> <a class="mr-2" href="#">&nbsp;Morena</a></p>
-</div>
-<h3 class="heading"><a href="https://blog.klm.com/lost-and-found/">John Lost and Barbara Found</a></h3>
-<p>This eye-catching artwork soon became a meeting point for travellers from Schiphol Airport - Amsterdam.</p>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex ftco-animate">
-<div class="blog-entry"><a class="block-20" style="background-image: url('uploads/defaults/blog3.jpg');" href="single.html"> </a>
-<div class="text mt-3 float-right d-block">
-<div class="d-flex align-items-center mb-3 meta">
-<p class="mb-0"><span class="mr-2">July 28, 2023</span> <a class="mr-2" href="#">CFL Group</a></p>
-</div>
-<h3 class="heading"><a href="https://blogcfl.lu/en/simply-explained/from-lost-property-to-found-happiness">Technology at the customer&rsquo;s service</a></h3>
-<p>Dedicated to helping you recover an item lost on a train or in a station, the Lost Property Office at Luxembourg Station handles more than 10,000 cases a year. With the aim of maximising the number of successful outcomes.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
+<!-- Blog posts Section End -->
